<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.clinton.adrreport.activities.LoginActivity">

    <include layout="@layout/progress"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView android:id="@+id/messageView"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#fff"
                      android:background="@color/accent"
                      android:textSize="15sp"
                      android:layout_marginBottom="10dp"
                      android:textAlignment="center"
                      android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/emailView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email address"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/sign_in_button"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@color/icons"
                    android:background="@color/accent"/>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center_horizontal"
                          android:paddingTop="10dp">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/not_registered"
                          android:textSize="15sp"/>

                <TextView android:id="@+id/reg_text"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/accent"
                          android:text="@string/register_here"
                          android:clickable="true"
                          android:paddingLeft="10dp"
                          android:paddingRight="10dp"
                          android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center_horizontal"
                          android:paddingTop="10dp">

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Or forgot password?"
                          android:textSize="15sp"/>

                <TextView android:id="@+id/forget_pass"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textColor="@color/accent"
                          android:text="recover here"
                          android:clickable="true"
                          android:paddingLeft="10dp"
                          android:paddingRight="10dp"
                          android:textSize="15sp"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
